2007-01-22	Mike Bourgeous		<i_am_nitrogen at hotmail.com>
	
	* Fixed interrupts.
	* Added another bit of documentation to register 10008.
	* Changed tl880_mkdev script to fix chown/chmod.
	* Compilation changes for 2.6.19 (may have broken earlier versions).
	* Fixed compilation on pre-2.6.19 kernels.

2007-01-20	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Removed __init from interrupt handlers.
	* Check some __must_check values.

2006-12-24	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added compilation fixes for 2.6.17 by Jason P. Matthews.

2006-03-23	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Started working on read() function for /dev/tl880/*.

2006-02-23	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Renamed some functions to make them exportable without polluting
	  namespace (i.e. added tl880_ prefix).
	* Started making modifications to allow writing a separate framebuffer
	  driver.
	* Added tl880mem.c to parallel tl880reg.c for card memory.

2006-02-15	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added rampram tool.
	* Modified striperam to accept a width parameter.
	* Added more OSD info to tl880doc.txt.
	* Updated OSD test tools.

2006-02-13	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added randreg tool.
	* Modified memdump and memload to accept addresses and lengths.
	* Added more OSD knowledge to tl880doc.txt.

2006-02-09	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Modified randram and striperam to accept address and length
	  parameters.
	* Added readmem and writemem tools to allow reading and writing TL880
	  memory.
	* Added memload tool to load a TL880 memory dump.
	* Added more OSD knowledge to tl880doc.txt.

2006-01-26	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Changed tl880init.c and tl880i2c.c to apply MyHD MDP-110
	  initialization methods to all MyHD cards until more is known about
	  the higher end cards (i.e. MDP-120 and MDP-130).

2006-01-25	Mike Bourgeous		<i_am_nitrogen at hotmail.com>
